--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,15 +14,6 @@ html {
 .text-white {
   color: #fff !important;
 }
-.row {
-  margin-left: -8px;
-  margin-right: -8px;
-}
-.row::after {
-  content: "";
-  display: block;
-  clear: both;
-}
 .mt-8px {
   margin-top: 8px !important;
 }
@@ -122,7 +113,9 @@ html {
 #slider {
   margin-top: 46px;
   padding-top: 56%;
-  background: url("/assets/img/neymar2.jpg") top center / cover no-repeat;
+  background-image: url("../img/neymar2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
 }
 #slider .text-content {
@@ -212,17 +205,18 @@ html {
   border-radius: 50%;
   margin-top: -3;
 }
+.container {
+  margin: 30px 0;
+}
 .place-list {
   display: flex;
   justify-content: space-around;
   padding: 32px 0;
 }
 .place-img {
-  max-width: 220px;
 }
 .place-body {
-  max-width: 220px;
-  padding: 0 16px;
+  padding: 0 15px;
 }
 .place-heading {
   margin: 15px 0;
@@ -253,21 +247,9 @@ html {
   background-color: #fff;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
   font-size: 15px;
-  max-width: 58%;
-}
-.col {
-  float: left;
-  padding-left: 8px;
-  padding-right: 8px;
-}
-.col-half {
-  width: 50%;
-}
-.col-full {
-  width: 100%;
+  margin: 15px 0;
 }
 .contact-content {
   margin-top: 48px;
